force-app/main/default/objects/Contact/fields/Current_Employer_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer_Source_of_Income__c</fullName>
    <label>Current Employer / Source of Income</label>
    <type>TextArea</type>
</CustomField>