force-app/main/default/objects/Contact/fields/Current_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Current_Landlord__c</fullName>
    <inlineHelpText>Provide Landlord information such as name, address, phone, and email</inlineHelpText>
    <label>Current Landlord</label>
    <type>TextArea</type>
</CustomField>