force-app/main/default/objects/Contact/fields/Current_Property_Mgt_Firm__c.field-meta.xml
<CustomField>
    <fullName>Current_Property_Mgt_Firm__c</fullName>
    <inlineHelpText>Provide Property Management information such as name, address, phone, and email</inlineHelpText>
    <label>Current Property Mgt Firm</label>
    <type>TextArea</type>
</CustomField>