force-app/main/default/objects/Contact/fields/Currently_Receiving_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Currently_Receiving_Assistance__c</fullName>
    <inlineHelpText>Please provide details on any assistant this person is receiving</inlineHelpText>
    <label>Currently Receiving Assistance</label>
    <type>TextArea</type>
</CustomField>