force-app/main/default/objects/Contact/fields/Desired_Training_or_Job__c.field-meta.xml
<CustomField>
    <fullName>Desired_Training_or_Job__c</fullName>
    <label>Desired Training or Job</label>
    <type>TextArea</type>
</CustomField>