force-app/main/default/objects/Contact/fields/Disability_Details__c.field-meta.xml
<CustomField>
    <fullName>Disability_Details__c</fullName>
    <description>If Disability is checked, user can provide details if available</description>
    <label>Disability Details</label>
    <type>TextArea</type>
</CustomField>