force-app/main/default/objects/Contact/fields/Domestic_Violence_Concern__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence_Concern__c</fullName>
    <label>Domestic Violence Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>