force-app/main/default/objects/Contact/fields/Housing_Issues__c.field-meta.xml
<CustomField>
    <fullName>Housing_Issues__c</fullName>
    <label>Housing Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind on Rent</fullName>
            </value>
            <value>
                <fullName>Code / Health / Safety</fullName>
            </value>
            <value>
                <fullName>Landlord Relationship</fullName>
            </value>
            <value>
                <fullName>Overcrowding</fullName>
            </value>
            <value>
                <fullName>Homeless or Threat of Homelessness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>