force-app/main/default/objects/Contact/fields/Housing_Issues_Notes__c.field-meta.xml
<CustomField>
    <fullName>Housing_Issues_Notes__c</fullName>
    <label>Housing Issues Notes</label>
    <type>TextArea</type>
</CustomField>