force-app/main/default/objects/Contact/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <description>Placeholder</description>
    <label>Legal Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>