force-app/main/default/objects/Contact/fields/Member_of_LGBTQ_Community__c.field-meta.xml
<CustomField>
    <fullName>Member_of_LGBTQ_Community__c</fullName>
    <label>Member of LGBTQ+ Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>