force-app/main/default/objects/Contact/fields/Needs_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Needs_Interpreter__c</fullName>
    <inlineHelpText>Please list the language(s) that this person requires an interpreter</inlineHelpText>
    <label>Needs Interpreter for</label>
    <length>20</length>
    <type>Text</type>
</CustomField>