force-app/main/default/objects/Contact/fields/Race_Other__c.field-meta.xml
<CustomField>
    <fullName>Race_Other__c</fullName>
    <description>If user selected Other for Race field, they can describe here</description>
    <label>Race Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>