force-app/main/default/objects/Contact/fields/Religions_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Religions_in_Household__c</fullName>
    <label>Religions in Household</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Religion</valueSetName>
    </valueSet>
</CustomField>