force-app/main/default/objects/Contact/fields/Seeking_Employment_Services__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Employment_Services__c</fullName>
    <label>Seeking Employment Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>