force-app/main/default/objects/Contact/fields/Social_Media_Handles__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Handles__c</fullName>
    <label>Social Media Handles</label>
    <type>TextArea</type>
</CustomField>