force-app/main/default/objects/Contact/fields/Social_Service_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Social_Service_Recipient__c</fullName>
    <label>Social Service Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>