force-app/main/default/objects/Contact/fields/Trade_School__c.field-meta.xml
<CustomField>
    <fullName>Trade_School__c</fullName>
    <label>Trade School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>