force-app/main/default/objects/Contact/fields/Trade_School_Description__c.field-meta.xml
<CustomField>
    <fullName>Trade_School_Description__c</fullName>
    <label>Trade School Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>