force-app/main/default/objects/Contact/listViews/Social_Services_Recipient.listView-meta.xml
<ListView>
    <fullName>Social_Services_Recipient</fullName>
    <columns>FULL_NAME</columns>
    <columns>Social_Service_Recipient__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Social_Service_Recipient__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Social Services Recipient</label>
</ListView>